# teaql-forge-rs

./: .cursorrules  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  README_zh.md  SECURITY.md  add_impl_back.py  clean_request_support.py  convert.py  fix_count.py  fix_entity_relations.py  fix_errors.py  fix_executor.py  fix_filter.py  fix_gen.py  fix_gen2.py  fix_gen3.py  fix_impl_pos.py  fix_loop.py  fix_loop2.py  fix_plurals.py  fix_q2.py  fix_q3.py  fix_q_impl.py  fix_records.py  fix_relations.py  fix_relations2.py  fix_replace.py  fix_repo.py  fix_script.py  fix_script3.py  fix_smartlist.py  fix_template.py  generate_q_template.py  inject_request_support.py  make_perfect_q_rs.py  (+12 more)
.github/: dependabot.yml
.github/workflows/: ci.yml
crates/teaql-forge-cli/src/: main.rs
crates/teaql-forge-codegen/: Cargo.toml
crates/teaql-forge-codegen/src/: context.rs  engine.rs
crates/teaql-forge-codegen/templates/: Cargo.toml.j2
crates/teaql-forge-codegen/templates/src/: lib.rs.j2  q.rs.j2  runtime.rs.j2
crates/teaql-forge-codegen/templates/src/entities/: entity.rs.j2
crates/teaql-forge-codegen/templates/workspace/: AGENTS.md.j2  Cargo.toml.j2  main.rs.j2
crates/teaql-forge-model/src/: ir.rs  parser.rs
crates/teaql-forge-server/: Cargo.toml
crates/teaql-forge-server/src/: main.rs
scripts/migration/: add_aggregations.py  clean_replace.py  copy_expanded.py  fix_all.py  fix_facets.py  fix_fields.py  fix_generic_executor.py  fix_hardcoded_relations.py  fix_relations3.py  fix_repo_name.py  fix_script2.py  fix_service_commit.py  generate_full_q.py  generate_q_template.py  revert_q_rs.py
teaql-forge-cli/: Cargo.toml
teaql-forge-codegen/: .gitignore  Cargo.toml  domain_output.json  left.rs  right.rs  runtime.rs.txt  rust-assist-create_output.md  rust-assist-delete_output.md  rust-assist-expression_output.md  rust-assist-list-page_output.md  rust-assist-query_output.md  rust-assist-runtime-custom_output.md  rust-assist-tool-api_output.md  rust-assist-update_output.md  test_preview_output.md
teaql-forge-codegen/src/: context.rs  engine.rs
teaql-forge-codegen/templates/: Cargo.toml.j2
teaql-forge-codegen/templates/doc/: data-design-react.j2  data-design-react.stg  data-design.MD  data-design.j2  data-design.stg  data-design.stg.txt  model-view-od.txt  model-view.j2  model-view.stg
teaql-forge-codegen/templates/lib/: entity_mod.rs.j2
teaql-forge-codegen/templates/lib/behavior/: index.j2
teaql-forge-codegen/templates/lib/cargo/: Cargo.toml.j2
teaql-forge-codegen/templates/lib/checker/: index.j2
teaql-forge-codegen/templates/lib/entity/: struct.rs.j2
teaql-forge-codegen/templates/lib/expression/: index.j2
teaql-forge-codegen/templates/lib/lib/: index.j2
teaql-forge-codegen/templates/lib/request/: index.j2
teaql-forge-codegen/templates/lib/request_support/: index.j2
teaql-forge-codegen/templates/lib/runtime/: index.j2
teaql-forge-codegen/templates/lib/sample_data/: index.j2  index.j2.bak
teaql-forge-codegen/templates/rust-assist-create/: prompt.md.j2  prompt.md.stg
teaql-forge-codegen/templates/rust-assist-debug/: prompt.md.j2  prompt.md.stg
teaql-forge-codegen/templates/rust-assist-delete/: prompt.md.j2  prompt.md.stg
teaql-forge-codegen/templates/rust-assist-expression/: prompt.md.j2  prompt.md.stg
teaql-forge-codegen/templates/rust-assist-list-page/: prompt.md.j2  prompt.md.stg
teaql-forge-codegen/templates/rust-assist-query/: prompt.md.j2  prompt.md.stg
teaql-forge-codegen/templates/rust-assist-runtime-custom/: prompt.md.j2  prompt.md.stg
teaql-forge-codegen/templates/rust-assist-tool-api/: prompt.md.j2  prompt.md.stg
teaql-forge-codegen/templates/rust-assist-tool-api/docs/: http.md
teaql-forge-codegen/templates/rust-assist-update/: prompt.md.j2  prompt.md.stg
teaql-forge-codegen/templates/rust-workspace/: Dockerfile.j2
teaql-forge-codegen/templates/src/: e.rs.j2  lib.rs.j2  q.rs.j2  runtime.rs.j2
teaql-forge-codegen/templates/workspace/: AGENTS.md.j2  API_GUIDE.md.j2  Cargo.toml.j2  Makefile.j2  README.md.j2  RUNTIME_CUSTOM_GUIDE.md.j2  TOOL_API.md.j2  TOOL_API_GUIDE.md.j2  lib.rs.j2  main.rs.j2
teaql-forge-codegen/tests/: alignment_test.rs  debug_obj.rs  dump_context.rs  dump_entity.rs  render_obj.rs  test_json.rs  test_minijinja.rs  test_preview.rs
teaql-forge-codegen/tests/expected/01_perfectly_valid/rust-app-console/: AGENTS.md  Cargo.toml  README.md  RUNTIME_CUSTOM_GUIDE.md  TOOL_API_GUIDE.md
teaql-forge-codegen/tests/expected/01_perfectly_valid/rust-app-console/lib/: Cargo.toml
teaql-forge-codegen/tests/expected/01_perfectly_valid/rust-app-console/lib/src/: lib.rs  request_support.rs  runtime.rs  sample_data.rs
teaql-forge-codegen/tests/expected/01_perfectly_valid/rust-app-console/lib/src/customer_issue/: behavior.rs  entity.rs  expression.rs  mod.rs  request.rs
teaql-forge-codegen/tests/expected/01_perfectly_valid/rust-app-console/lib/src/support_ticket/: behavior.rs  checker.rs  entity.rs  expression.rs  mod.rs
teaql-forge-codegen/tests/expected/01_perfectly_valid/rust-app-console/lib/src/ticket_status/: entity.rs  expression.rs  request.rs
teaql-forge-codegen/tests/expected/01_perfectly_valid/rust-app-console/src/: lib.rs  main.rs
teaql-forge-codegen/tests/expected/01_perfectly_valid/rust-workspace/rust-web-axum/: Cargo.toml
teaql-forge-codegen/tests/expected/01_perfectly_valid/rust-workspace/rust-web-axum/src/: main.rs
teaql-forge-model/: Cargo.toml
teaql-forge-model/src/: error.rs  ir.rs  parser.rs
teaql-forge-server/: Cargo.toml
teaql-forge-server/src/: demo.xml  eval.rs  main.rs
teaql-forge-server/src/rules/: mod.rs  module.rs  object_metadata.rs  root.rs  structure.rs
(+36 files in other folders)
