[workspace]
members = [
    "crates/teaql-forge-model",
    "crates/teaql-forge-codegen",
    "crates/teaql-forge-cli", "crates/teaql-forge-server", "crates/teaql-forge-server",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Philip <philip@example.com>"]
license = "MIT"

[workspace.dependencies]
thiserror = "1.0"
miette = { version = "7.0", features = ["fancy"] }
roxmltree = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
minijinja = "2.0"
