[workspace]
members = [
    "teaql-forge-model",
    "teaql-forge-codegen",
    "teaql-forge-server",
]
resolver = "2"

[workspace.package]
version = "0.1.1"
edition = "2021"
authors = ["Philip <philip@example.com>"]
license = "Apache-2.0"

[workspace.dependencies]
thiserror = "1.0"
miette = { version = "7.0", features = ["fancy"] }
roxmltree = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
minijinja = "2.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
