[package]
name = "teaql-forge-codegen"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
teaql-forge-model = { path = "../teaql-forge-model" }
minijinja.workspace = true
thiserror.workspace = true
miette.workspace = true
heck = "0.5.0"
serde = { workspace = true, features = ["derive"] }
Inflector = "0.11.4"
