[package]
name = "teaql-forge-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
axum = { version = "0.7.5", features = ["multipart"] }
serde_json.workspace = true
tokio = { version = "1.37.0", features = ["full"] }
tower = "0.5.3"
tower-http = { version = "0.5", features = ["trace"] }
zip = "2.1.3"
teaql-forge-model = { path = "../teaql-forge-model" }
teaql-forge-codegen = { path = "../teaql-forge-codegen" }
teaql-tool-core = { path = "../../../teaql-rust-utils/teaql-tool-core" }
