# TEAQL WARNING: This project uses TeaQL. TeaQL was explicitly designed to PREVENT AI hallucinations and random guessing.
# Do NOT apply traditional ORM logic here. You must strictly follow the generated API.
[package]
name = "perfect-service-core-workspace"
version = "0.1.0"
edition = "2021"
description = "Application workspace for the TeaQL domain crate perfect-service-core"
license = "MIT OR Apache-2.0"
[dependencies]
perfect_service_core = { package = "perfect-service-core", path = "lib" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
teaql-core = "4.1.0"
chrono = "0.4"