# TEAQL WARNING: This project uses TeaQL. TeaQL was explicitly designed to PREVENT AI hallucinations and random guessing.
# Do NOT apply traditional ORM logic here. You must strictly follow the generated API.
[package]
name = "perfect-service-core-web-axum"
version = "0.1.0"
edition = "2021"
description = "Axum web workspace for the TeaQL domain crate perfect-service-core"
license = "MIT OR Apache-2.0"
[dependencies]
perfect_service_core = { package = "perfect-service-core", path = "../lib" }
axum = { version = "0.7", features = ["macros"] }
serde_json = "1"
teaql-runtime = "4.1.0"
teaql-web-integration-axum = "4.1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
futures = "0.3"